# catan-bench

./: .gitignore  README.md  backlog.md  blog-draft.md  pyproject.toml
config/: default.yaml
results/20260207_130850/: games.csv  results.json  summary.txt  traces.jsonl
results/20260208_110318/: games.csv  results.json  summary.txt
results/20260208_131100/: games.csv  results.json  summary.txt  traces.jsonl
results/20260209_042323/: games.csv  results.json  summary.txt
results/20260209_123149/: games.csv  results.json  summary.txt
scripts/: generate_charts.py  run_benchmark.py
src/catan_bench/: __init__.py  analysis.py  llm_player.py  metrics.py  runner.py  state_serializer.py  trading.py
src/catan_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/catan_bench/providers/: __init__.py  anthropic.py  google.py  openai.py
